# glprojs

./: .gitignore  README.md
3thousandspheres/: Makefile  main.cpp  process_input.cpp
3thousandspheres/shaders/: mainVertex.vert
3thousandspheres/space_partition/: 2d_array.hpp  2darrtest.cpp  Makefile  frustum.hpp  frustum_cull.cpp  frustum_cull.hpp  frustum_test.cpp  incorrect_bbox_cull  ll_octree.hpp  octree.hpp  sphere_cull  test  test.cpp  test_octree.cpp
cmakeandglewtest/: CMakeLists.txt  Makefile  main.cpp  polygon_funcs.cpp
cmakeandglewtest/include/: shader.h
cmakeandglewtest/shaders/: mainVertex.vert
cmakeandglewtest/src/: main.cpp  mesh.cpp  process_input.cpp  shader.h
cube/: Makefile  main.cpp
cube/shaders/: vertex.glsl
gltf_loader/: types.hpp
gltf_loader/jsonparse/: object.hpp  parser.cpp  parser.hpp
kochsnowflake/: Makefile  README.md  main.cpp
kochsnowflake/shaders/: vertex.glsl
movement/: main.cpp  process_input.cpp
movement/include/: shader.h
obj_loader_testing/: Makefile  main.cpp  wavefront_loader
objparser/: main.cpp  parse_wavefront.cpp  test.cpp
openglbase/: Makefile  assimp_test  assimp_test.cpp  main.cpp  process_input.cpp
phongtesting/: main.cpp  polygon_funcs.cpp  process_input.cpp
physics/: Makefile  main.cpp  process_input.cpp
texturetesting/: Makefile  main.cpp
wavefront_loader/: Makefile  loader.cpp  loader.hpp  mesh.hpp  save_load.cpp  save_load.hpp  save_load_utils.cpp  save_load_utils.hpp  serialize_utils.cpp  string_utils.cpp  string_utils.hpp  triangulate.cpp  triangulate.hpp
(+15 files in other folders)
